# promptty

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
cmake/: prompttyConfig.cmake.in  version.hpp.in
examples/: CMakeLists.txt  example.cpp
include/promptty/: promptty.hpp
src/: promptty.cpp
